change file extension from php to html

--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
         <div class="container">
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-center mb-3 py-2 mb-4 border-bottom navbar-dark bg-dark fixed-top">
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="index.php" class="nav-link px-2 link-light">Home</a></li>
-                    <li><a href="about.php" class="nav-link px-2 link-active">About Me</a></li>
-                    <li><a href="portfolio.php" class="nav-link px-2 link-light">Portofolio</a></li>
+                    <li><a href="index.html" class="nav-link px-2 link-light">Home</a></li>
+                    <li><a href="about.html" class="nav-link px-2 link-active">About Me</a></li>
+                    <li><a href="portfolio.html" class="nav-link px-2 link-light">Portofolio</a></li>
                     <li><a href="https://wa.me/+6282142830175" target="_blank" class="nav-link px-2 link-light">Contact Person</a></li>
                 </ul>
             </header>
