--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <div class="container">
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-center mb-3 py-2 navbar-light bg-secondary  fixed-top">
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="index.php" class="nav-link px-2 link-warning">Home</a></li>
-                    <li><a href="about.php" class="nav-link px-2 link-light">About Me</a></li>
-                    <li><a href="portfolio.php" class="nav-link px-2 link-light">Portofolio</a></li>
+                    <li><a href="index.html" class="nav-link px-2 link-warning">Home</a></li>
+                    <li><a href="about.html" class="nav-link px-2 link-light">About Me</a></li>
+                    <li><a href="portfolio.html" class="nav-link px-2 link-light">Portofolio</a></li>
                     <li><a href="https://wa.me/+6282142830175" target="_blank" class="nav-link px-2 link-light">Contact Person</a></li>
                 </ul>
             </header>
@@ -21,7 +21,7 @@
                 <h1>PORTOFOLIO</h1>
                 <p class="lead">Saya Gilang Fajar Nur Ainun, saya adalah mahasiswa teknik informatika dan sekarang sudah menginjak semester 5. <br> Portofolio ini Berisi beberapa hal tentang saya dan juga project project yang pernah saya buat selama ini.</p>
                 <p class="lead">
-                    <a href="about.php" class="btn btn-lg btn-primary fw-bold border-white bg-white text-dark">lihat selengkapnya!</a>
+                    <a href="about.html" class="btn btn-lg btn-primary fw-bold border-white bg-white text-dark">lihat selengkapnya!</a>
                 </p>
             </div>
         </div>
